# blueprint-mcp

./: .blueprint.html  .gitignore  CLAUDE.md  CLAUDE_CODE_PLAN.md  MASTER_BUILD_PLAN.md  PHASE_6_TO_10_PLAN.md  README.md  mcp.json  multi_entity_business.json  pyproject.toml  xray-round3-declutter.md
.claude/commands/: fix-layout.md  xray-polish.md
src/: analyzer.py  annotations.py  cli.py  db.py  export.py  health.py  impact.py  models.py  projects.py  query.py  questions.py  review.py  server.py  snapshots.py  stale.py  tracer.py  whatif.py  xray.py
src/scanner/: __init__.py  base.py  config_scanner.py  docker_scanner.py  file_scanner.py  go_scanner.py  javascript_scanner.py  js_frameworks.py  js_import_resolver.py  js_patterns.py  python_scanner.py  rust_scanner.py  sql_scanner.py  swift_scanner.py
src/templates/: api_service.json  data_pipeline.json  desktop_app.json  fullstack.json  registry.py  saas.json
src/viewer/: __init__.py  __main__.py  serve.py
tests/: test_analyzer.py  test_annotations.py  test_cli.py  test_export.py  test_health.py  test_impact.py  test_models_descriptions.py  test_projects.py  test_query.py  test_questions.py  test_review.py  test_scanner.py  test_server.py  test_snapshots.py  test_stale.py  test_templates.py  test_tracer.py  test_whatif.py  test_xray.py
tests/fixtures/config_project/: .env  main.tf  schema.graphql  schema.sql
tests/fixtures/django_project/: models.py  pyproject.toml  urls.py  views.py
viewer/: index.html  package-lock.json  package.json  vite.config.ts
viewer/src/: App.tsx  types.ts
(+73 files in other folders)
