[project]
name = "blueprint-mcp"
version = "0.1.0"
description = "MCP server — living architectural map of software projects"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "pathspec>=0.12.0",
    "uvicorn>=0.27.0",
    "starlette>=0.36.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
